# robo-sort

./: .gitignore  ANDROID_APP_SETUP.md  COMMAND_PROTOCOL_REFERENCE.md  RC_SYSTEM_COMPLETE.md  README.md  REMOTE_SIMULATION_SETUP.md  network_setup.sh  test_network.sh
diagram/: Lidar_Buck_USBToTTL_Wiring.fzz  Wiring.fzz
diagrams/: 3d_model_specification.md  README.md  pin_configuration.txt  system_architecture.puml  visual_diagram_specifications.md  wiring_diagram_specification.md  workflow_diagrams.md
model/: CE3V3SE_RoboSort_Bin_Tensioner_Mount.gcode  CE3V3SE_RoboSort_Rpi_Holder.gcode  RoboSort_Arm_Gripper_Hand_Extension.stl  RoboSort_Arm_Gripper_Rotator_Mount.stl  RoboSort_Arm_Gripper_Servo_Hand_Mount.stl  RoboSort_Bearing_Bin_Guide_Mount.stl  RoboSort_Bin_Entrance_Mount.stl  RoboSort_Bin_Gear.stl  RoboSort_Bin_Limit_Switch_Trigger.stl  RoboSort_Bin_Stepper_Mount.stl  RoboSort_Bin_Tensioner_Mount.stl  RoboSort_Bin_Tensioner_Mount_Base.stl  RoboSort_Bin_Tensioner_Pulley_Mount.stl  RoboSort_Lidar_Mount.stl  RoboSort_Lifter_Limit_Switch_Mount.stl  (+12 more)
source/rpi/ros2-robosort/src/robosort_sensors/: FAKE_ODOM_README.md  NAV2_VISUALIZATION_README.md  package.xml  setup.cfg  setup.py
source/rpi/ros2-robosort/src/robosort_sensors/config/: laser_filter.yaml  nav2_params.yaml  slam_nav2.rviz  slam_params.yaml
source/rpi/ros2-robosort/src/robosort_sensors/launch/: fake_odom_launch.py  lidar.launch.py  nav2_slam.launch.py  nav2_visualization.launch.py
source/rpi/ros2-robosort/src/robosort_sensors/robosort_sensors/: fake_odom.py  lidar_processor.py  object_localizer.py
(+280 files in other folders)
